# ChessEngine

./: .gitignore  Cargo.toml
benches/: hash_board.rs  test_moves.rs
chess_game/: Cargo.toml
chess_game/benches/: create_board.rs  test_bench.rs  test_moves.rs
chess_game/src/: board.rs  debug.rs  debug_structs.rs  eval_board.rs  game.rs  game_board_info.rs  lib.rs  piece.rs
chess_game/src/MoveGen/: Generate.rs  MagicMoves.rs  Magics.rs
engine/: Cargo.toml
engine/benches/: test_moves.rs  test_rank_file_calc.rs
engine/src/: Constants.rs  UTILS.rs  board.rs  debug.rs  engine.rs  eval_board.rs  game.rs  game_tree.rs  lib.rs  magic.rs  main.rs  move_gen.rs  move_list.rs
engine/src/move_gen/: Generate.rs  bishop_move_gen.rs  rook_move_gen.rs
src/: board.rs  debug.rs  debug_structs.rs  game.rs  lib.rs  piece.rs
