[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"

[dev-dependencies]
criterion = {version = "0.5.1", features = ["html_reports"]}


[[bench]]
name = "test_moves"
harness = false
